--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js",
-    "dev":"nodemon server.js"
+    "dev":"node --watch server.js"
   },
   "repository": {
     "type": "git",
@@ -25,8 +24,5 @@
     "express": "^4.18.1",
     "mongoose": "^6.4.7",
     "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
   }
 }
